move creation of OSHEntitySource up from Kernel class to backends